--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,9 +21,9 @@ postfix_smtpd_tls_cert_file: "/etc/ssl/certs/ssl-cert-snakeoil.pem"
 
 postfix_smtpd_tls_key_file: "/etc/ssl/private/ssl-cert-snakeoil.key"
 
-postfix_smtpd_tls_session_cache_database: "btree:$\{data_directory\}/smtpd_scache"
+postfix_smtpd_tls_session_cache_database: "btree:${data_directory}/smtpd_scache"
 
-postfix_smtp_tls_session_cache_database: "btree:$\{data_directory\}/smtp_scache"
+postfix_smtp_tls_session_cache_database: "btree:${data_directory}/smtp_scache"
 
 postfix_alias_maps: "hash:/etc/aliases"
 
